--- a/media/styles.css
+++ b/media/styles.css
@@ -86,3 +86,20 @@
     font-weight: bold;
     margin-top: 10px;
 }
+
+/* Spinner */
+.spinner {
+    visibility: hidden;
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border-left-color: #09f;
+    animation: spin 1s linear infinite;
+    margin-top: 10px;
+}
+
+@keyframes spin {
+    to { transform: rotate(360deg); }
+}
+
